# FPL

./: .autotools  .cproject  .gitignore  .project  Doxyfile  bootstrap  clean  configure.ac  exptable.h  test
doc/: .gitignore  dokumentacja.asciidoc  dokumentacja.html  fplshell.asciidoc
script/: find_tests
src/: Makefile.am
src/FPL/: Makefile.am  Makefile.am.orig  arctan_FPLTAB.h  arctan_table.h  arithmetic.c  atan.c  classification.c  compare.c  conversions.c  conversions.c.orig  costable.h  cotantable.h  exponent.c  exptable.h  float.c  float.h  functions.h  ieee_conversions.c  io.c  io.h  logarythm.c  logtable.h  logtable1.h  logtable2.h  logtable3.h  macros.h  oldcostable.h  oldsintable.h  poly_eval.c  sign_operations.c  sincos.c  sintable.h  sqrt.c  tancotan.c  tantable.h  utils.c  utils.h
src/demo/: Makefile.am  function_test.h  generators.h  logtable3.h  random.cpp  sintable.h  table_printer.cpp
src/demo/FPL/: arithmetic.c  conversions.c  exptable  interoperability.c  interoperability.h  logarythm.c
src/fplib/: Makefile.am  dummy.c  dummy.h  float.c  float.h  interoperability.c  interoperability.h
src/fplshell/: .gitignore  Makefile.am  ast.c  ast.h  builtins.c  eval.c  fplshell  fplshell.h  lexer.c  lexer.l  main.c  parser.c  parser.h  parser.y  symbols.c  symbols.h  table_printer  table_printer.c  value.c  value_list.c  value_list.h
src/test/: Makefile.am  Values.h  arithmetic.test  classification.test  float.test  interoperability.test  sign_operations.test  test.test  test_interoperability.test  util.test
src/util/: Makefile.am  table_converter.cpp
